--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,7 @@
 /* mobile device */
 @media screen and (max-width:575px) {
     /* navbar media */
-    .nav-menu ul{
+    .nav-menu ul, .badge{
         display: none;
     }
     nav{
@@ -15,7 +15,7 @@
         flex-direction: column-reverse;
         margin: 28px 0 60px;
     }
-    .bannerContent, .plants{
+    .bannerContent, .plants, .flowerLover{
         margin: 0 16px;
     }
     .bannerTitle{
@@ -25,7 +25,7 @@
     .bannerDescription{
         font-size: 1rem;
     }
-    /* plants styles */
+    /* plants media */
     .plants-card{
         grid-template-columns: repeat(2, 1fr);
     }
@@ -49,5 +49,25 @@
     .plants-btn{
         padding: 19px 48px;
     }
-    
+    /* badge media */
+    .flowerLover{
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 40px;
+        margin-bottom: 80px;
+    }
+    .flowerImg img{
+        width: 100%;
+    }
+    .flowerTitle{
+        font-size: 1.5rem;
+        margin-bottom: 15px;
+    }
+    .flowerContent ul{
+        margin-left: 20px;
+        font-size: 1rem;
+    }
+    .flowerContent li{
+        margin-bottom: 15px;
+    }
 }
