--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,130 +1,137 @@
 /* mobile device */
-@media screen and (max-width:575px) {
-    /* navbar media */
-    .nav-menu ul, .badge{
-        display: none;
-    }
-    nav{
-        margin: 13px 16px 0 16px;
-    }
-    .nav-logo img{
-        width: 55%;
-    }
-    /* banner media */
-    .banner{
-        flex-direction: column-reverse;
-        margin: 28px 0 60px;
-    }
-    .bannerContent, .plants, .flowerLover, .deals, .footerCard{
-        margin: 0 16px;
-    }
-    .bannerTitle{
-        margin-top: 28px;
-        font-size: 1.5rem;
-    }
-    .bannerDescription{
-        font-size: 1rem;
-    }
-    /* plants media */
-    .plants-card{
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .headingTitle{
-        font-size:1.5rem;
-    }
-    .card img{
-        width: 100%;
-    }
-    .description{
-        font-size: 1.2rem;
-        margin: 10px 0 25px;
-    }
-    .plants-title{
-        font-size: 1rem;
-    }
-    .plants-price{
-        font-size: 1rem;
-        margin: 10px 0 15px;
-    }
-    .plants-btn{
-        padding: 19px 48px;
-    }
-    /* badge media */
-    .flowerLover{
-        flex-direction: column;
-        gap: 20px;
-        margin-top: 40px;
-        margin-bottom: 80px;
-    }
-    .flowerImg img{
-        width: 100%;
-    }
-    .flowerTitle{
-        font-size: 1.5rem;
-        margin-bottom: 15px;
-    }
-    .flowerContent ul{
-        margin-left: 20px;
-        font-size: 1rem;
-    }
-    .flowerContent li{
-        margin-bottom: 15px;
-    }
-    /* deals media */
-    .deal{
-        display: grid;
-        grid-template-columns: 1fr;
-        margin-bottom: 40px;
-    }
-    .childOne{
-        /* justify-items: center; */
-    }
-    .zaboPlant{
-        padding: 60px 48px 54px 48px;
-    }
-    .zaboPlant{
-        width: 97%;
-        height: 172px;
-        border-radius: 14px;
-    }
-    .zaboTitle, .bloomTitle, .anaTitle{
-        font-size:1.25rem;
-        margin-bottom: 15px;
-    }
-    .zaboDescription, .bloomDescription, .anaDescription{
-        font-size: 1rem;
-    }
-    .deal{
-        margin-left: 15px;
-    }
-    /* join media */
-    .join{
-        padding: 115px 36px 61px 36px;
-    }
-    .joinTitle{
-        font-size: 1.25rem;
-    }
-    .join input[type="email"]{
-        width: 218px;
-    }
-    .join input[type="button"]{
-        width: 103px;
-        margin-left: -5px;
-    }
-    /* footer media */
-    .footerCard{
-        margin-top: 50px;
-        margin-bottom: 50px;
-        flex-direction: column;
-        gap: 0;
-    }
-    .footerChildCard ul{
-        grid-template-columns: 1fr;
-    }
-    .footerChild img,.footerDescription{
-        margin-top: 20px;
-    }
-    .footerDescription{
-        margin-bottom: 20px;
-    }
+@media screen and (max-width: 576px) {
+  /* navbar media */
+  .nav-menu ul,
+  .badge {
+    display: none;
+  }
+  nav {
+    margin: 13px 16px 0 16px;
+  }
+  .nav-logo img {
+    width: 55%;
+  }
+  /* banner media */
+  .banner {
+    flex-direction: column-reverse;
+    margin: 28px 0 60px;
+  }
+  .bannerContent,
+  .plants,
+  .flowerLover,
+  .deals,
+  .footerCard {
+    margin: 0 16px;
+  }
+  .bannerTitle {
+    margin-top: 28px;
+    font-size: 1.5rem;
+  }
+  .bannerDescription {
+    font-size: 1rem;
+  }
+  /* plants media */
+  .plants-card {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .headingTitle {
+    font-size: 1.5rem;
+  }
+  .card img {
+    width: 100%;
+  }
+  .description {
+    font-size: 1.2rem;
+    margin: 10px 0 25px;
+  }
+  .plants-title {
+    font-size: 1rem;
+  }
+  .plants-price {
+    font-size: 1rem;
+    margin: 10px 0 15px;
+  }
+  .plants-btn {
+    padding: 17px 46px;
+  }
+  /* badge media */
+  .flowerLover {
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 40px;
+    margin-bottom: 80px;
+  }
+  .flowerImg img {
+    width: 100%;
+  }
+  .flowerTitle {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+  }
+  .flowerContent ul {
+    margin-left: 20px;
+    font-size: 1rem;
+  }
+  .flowerContent li {
+    margin-bottom: 15px;
+  }
+  /* deals media */
+  .deal {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-bottom: 40px;
+  }
+  .zaboPlant {
+    padding: 65px 48px;
+  }
+  .zaboPlant {
+    width: 96%;
+    height: 201px;
+    border-radius: 14px;
+  }
+  .zaboTitle,
+  .bloomTitle,
+  .anaTitle {
+    font-size: 1.25rem;
+    margin-bottom: 15px;
+  }
+  .zaboDescription,
+  .bloomDescription,
+  .anaDescription {
+    font-size: 1rem;
+  }
+  .deal {
+    margin-left: 15px;
+  }
+  /* join media */
+  .join {
+    padding: 115px 36px 61px 36px;
+  }
+  .joinTitle {
+    font-size: 1.25rem;
+  }
+  .join input[type="email"] {
+    width: 200px;
+  }
+  .join input[type="button"] {
+    width: 103px;
+    margin-left: -6px;
+  }
+  /* footer media */
+  .footerCard {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    flex-direction: column;
+    gap: 0;
+  }
+  .footerChildCard ul {
+    grid-template-columns: 1fr;
+  }
+  .footerChild img,
+  .footerDescription {
+    margin-top: 20px;
+  }
+  .footerDescription {
+    margin-bottom: 20px;
+  }
 }
